--- a/public/jan2025/index.html
+++ b/public/jan2025/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continuous AI - January Dinner</title>
-    
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     
     <!-- Open Graph / Social Cards -->
     <meta property="og:type" content="website">
