--- a/public/jan2025/index.html
+++ b/public/jan2025/index.html
@@ -8,13 +8,13 @@
     
     <!-- Open Graph / Social Cards -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="You're Invited — Continuous AI January Dinner">
+    <meta property="og:title" content="Continuous AI Dinner">
     <meta property="og:description" content="San Francisco · January 2025">
     <meta property="og:image" content="og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="You're Invited — Continuous AI January Dinner">
+    <meta name="twitter:title" content="Continuous AI Dinner">
     <meta name="twitter:description" content="San Francisco · January 2025">
     <meta name="twitter:image" content="og-image.png">
     
