Add dltHub to ecosystem tools list
Added to both main page and jan2025 dinner invite

Generated with [Continue](https://continue.dev)

Co-Authored-By: Continue <noreply@continue.dev>

--- a/public/jan2025/index.html
+++ b/public/jan2025/index.html
@@ -565,6 +565,10 @@
                     <img src="icons/sanity.svg" alt="">
                     Sanity
                 </button>
+                <button class="tool-btn" data-tool="dlthub">
+                    <img src="icons/dlthub.svg" alt="">
+                    dltHub
+                </button>
             </div>
         </section>
 
@@ -622,6 +626,7 @@
             confluent: { name: 'Confluent', role: 'data streaming', desc: 'Event-driven AI that perceives, reasons, and acts as events unfold in real-time', category: 'data' },
             cognee: { name: 'Cognee', role: 'context engineering', desc: 'Knowledge graphs and vector search give AI the right information at the right time', category: 'data' },
             graphene: { name: 'Graphene', role: 'AI-native BI', desc: 'BI with semantic layers that lives in your repo and AI agents can query via CLI', category: 'analytics' },
+            dlthub: { name: 'dltHub', role: 'data pipelines', desc: 'Python library for declarative data loading that AI agents can use to move data between systems', category: 'data' },
             github: { name: 'GitHub', role: 'code hosting', desc: 'PRs, issues, actions, and Codespaces can all be automated by AI', category: 'code' },
             supabase: { name: 'Supabase', role: 'backend platform', desc: 'Real-time subscriptions and row-level security enable AI workflows with proper data access', category: 'data' },
             sanity: { name: 'Sanity', role: 'content platform', desc: 'Structured content with schemas AI can understand—typed, relational data', category: 'content' },
